--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Home | My React App</title>
+    <meta
+      name="description"
+      content="Welcome to the homepage of My React App."
+    />
+    <!-- 🔵 Open Graph Meta Tags -->
+    <meta property="og:title" content="This is react js from pre afternoon class" />
+    <meta
+      property="og:description"
+      content="This website is from pre university afternoon class"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://react-afternoon-class.vercel.app/" />
+    <meta
+      property="og:image"
+      content="https://cdn-0001.qstv.on.epicgames.com/IleOwbjBqfYzTcZXbN/image/landscape_comp.jpeg"
+    />
+
+    <!-- 🐦 Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Welcome to My React App" />
+    <meta
+      name="twitter:description"
+      content="Explore the best React content here."
+    />
+    <meta
+      name="twitter:image"
+      content="https://travis.media/images/2019/12/change-the-open-graph-image-size.jpg"
+    />
+
+    <link rel="canonical" href="https://yourdomain.com/" />
   </head>
   <body>
     <div id="root"></div>
